# sched

./: .gitignore  CNAME  README.md  about.py  app.py  environment.yml  explore.ipynb  feedback.py  index.html  master_block_schedule.csv  off_service_hours.csv  parse_sched.py  pyproject.toml  residents.csv  sched.py  sched_consts.py  sched_helpers.py  schedule.ics
.streamlit/: config.toml
data/: master_block_schedule.csv  resdb.xlsx  shifts.csv
data/db/: ddl.sql
sched/: models.py  orm.py
