[tool.poetry]
name = "sched"
version = "0.1.0"
description = "A better residency scheduler"
authors = ["Maxwell Spadafore <maxspad@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
