[tool.poetry]
name = "sched"
version = "0.1.0"
description = "A better residency scheduler"
authors = ["Maxwell Spadafore <maxspad@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
email-validator = "^2.1.0.post1"
pandas = "^2.2.0"
numpy = "^1.26.4"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
